[package]
name = "ros"
version = "0.1.0"
authors = ["Rishit Khandelwal <rishit@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.13.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]